# pass-to-bitwarden

./: Cargo.toml  README.md
src/: bit_folder.rs  bitwarden_entry.rs  bitwarden_json.rs  main.rs
src/bitwarden_entry/: history.rs  login.rs
